apply min-width to icon to prevent it rendering small when label wraps

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -124,6 +124,7 @@
       margin-right: $tw-spc-base-x-small;
       line-height: $tw-sz-icon-small;
       height: $tw-sz-icon-small;
+      min-width: $tw-sz-icon-small;
       width: $tw-sz-icon-small;
     }
 
